scss/base/_base.scss
html,
body {
  height: 100%;
}

body {
  font-family: $font_poppins;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  overscroll-behavior: none;
}

#app {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: auto;
  overflow-x: hidden;
  @include themed {
    background-color: theme("primary");
  }
}

.img-cover {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.img-responsive {
  width: 100%;
  height: auto;
  display: block;
}

.content {
  width: 100vw;
  text-align: center;
  font-size: 4rem;
  font-family: $font_gallient;
  text-transform: uppercase;
}

// @media (max-width: 1023px) {
//   #app {
//     position: relative;
//   }
// }

